--- a/assignment3/update.phtml
+++ b/assignment3/update.phtml
@@ -2,26 +2,38 @@
 
 <br>
 
-<div class="container">
+    <div class = "container">
     <a class="btn btn-primary" href="?page=users" role="button">Back to view record</a>
     <form method="POST">
-        <input type="hidden" name="action" value="update">
-        <input type="hidden" name="id" value="<?=$id?>">
-        <div class="mb-3">
-            <label class="form-label">First Name</label>
-            <input type="text" name="fName" value="<?=$f_name?>" class="form-control">
+    <input type="hidden" name="action" value="update">
+    <input type="hidden" name="id" value="<?=$id?>">
+<div class="mb-3">
+            <label class="form-label">TV:</label>
+            <input type="text" class="form-control" value="<?=$tv?>" name="modelName" placeholder="Please enter the model">
+        </div>
+    <div class="mb-3">
+            <label class="form-label">Brand:</label>
+            <input type="text" class="form-control" value="<?=$brand?>" name="modelName" placeholder="Please enter the model">
         </div>
         <div class="mb-3">
-            <label class="form-label">Last Name</label>
-            <input type="text" name="lName" value="<?=$l_name?>" class="form-control">
+            <label class="form-label">Model:</label>
+            <input type="text" class="form-control" value="<?=$model?>" name="modelName" placeholder="Please enter the model">
         </div>
         <div class="mb-3">
-            <label class="form-label">Age</label>
-            <input type="number" name="age" value="<?=$age?>" class="form-control">
+            <label class="form-label">Size:</label>
+            <input type="text" class="form-control" value="<?=$size?>" name="modelName" placeholder="Please enter the model">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Price:</label>
+            <input type="text" class="form-control" value="<?=$price?>" name="modelName" placeholder="Please enter the model">
+        </div>
+        
+        
+        <div class="mb-3">
+            <label class="form-label">Description:</label>
+            <input type="text" class="form-control" value="<?=$desc?>" name="modelName" placeholder="Please enter the description">
         </div>
 
-        <button type="submit" class="btn btn-primary">Save</button>
-    </form>
 
 <br>
 
